-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.1, 6.0
-
803a5fda05832b139cc1d76b666777491c708a96 (qt/qtdeclarative/dev) 0700f03e0163fe2e86c02fda3a7c173cb88faa0e (qt/qtdeclarative/6.2)
I want to check that properties marked as required is really filled.
qmlllint can not find any problem in code like this:
MyTask {
}
where MyTask has
Q_PROPERTY(int x MEMBER x_ REQUIRED)
And looks like "required" completly unsupported.
qmltypes file has no something like "isRequired" for "Property" tag.
At least qmltyperegistrar generates file without it.
qmllint have no any mention of "required".
MetaProperty in qtdeclarative/tools/shared/metatypes.h has no field related to "required".
Only moc generate right metatypes.json, where "x" marked as required.