tests/auto/qml/qmllint/data/requiredProperty.qml
@@ -3,4 +3,5 @@ import QtQml 2.15
 QtObject {
     property int x
     required x
+    x: 5
 }
