tests/auto/qml/qmllint/data/requiredPropertyBindingsNow.qml
@@ -1,0 +1,17 @@
+import QtQuick 2.0
+
+Item {
+    component Base : Item {
+        required property string required_now_string
+        property string required_later_string
+    }
+
+    component Derived : Base {
+        required required_later_string
+    }
+
+    Derived {
+       required property string required_defined_here_string
+       required_later_string: ""
+    }
+}
